--- a/kde/slideshow.html
+++ b/kde/slideshow.html
@@ -23,7 +23,7 @@ img {vertical-align: middle;}
   width: auto;
   padding: 6px;
   margin-top: -22px;
-  color: white;
+  color: gray;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -33,7 +33,7 @@ img {vertical-align: middle;}
 
 /* Position the "next button" to the right */
 .next {
-  right: 30%;
+  right: 5%;
   border-radius: 3px 0 0 3px;
 }
 
