--- a/kde/slideshow.html
+++ b/kde/slideshow.html
@@ -50,7 +50,7 @@ img {vertical-align: middle;}
   position: absolute;
   bottom: 8px;
   width: 80%;
-  text-align: right;
+  text-align: left;
 }
 
 /* Number text (1/3 etc) */
