--- a/index.html
+++ b/index.html
@@ -11,43 +11,43 @@
     <div class="container">
         <div class="w-50 mx-auto my-3 text-center">
             <h1>My SlideShow</h1>
-            <p>my SlideShow written with html, css and javascript</p>
+            <p>Plasma Cusomizations</p>
             <hr>
 
             <div class="slideshow">
                 <div class="slides">
                     <div class="slide active">
-                        <img src="./media/1.jpg" alt="my beautiful table.">
+                        <img src="./images/Screenshot_sddm.png" alt="Login Theme.">
                         <div>
-                            <p>my beautiful table</p>
+                            <p>SDDM Login Theme</p>
                         </div>
                     </div>
 
                     <div class="slide">
-                        <img src="./media/2.jpg" alt="my beautiful nature.">
+                        <img src="./images/desktop.png" alt="Plasma Desktop.">
                         <div>
-                            <p>my beautiful nature</p>
+                            <p>Plasma Desktop</p>
                         </div>
                     </div>
 
                     <div class="slide">
-                        <img src="./media/3.jpg" alt="my beautiful eagle.">
+                        <img src="./images/desktop2.png" alt="Plasma Desktop Menu.">
                         <div>
-                            <p>my beautiful eagle</p>
+                            <p>Plasma Desktop Menu</p>
                         </div>
                     </div>
 
                     <div class="slide">
-                        <img src="./media/4.jpg" alt="my beautiful dog.">
+                        <img src="./images/Screenshot_20211017_154010.png" alt="Desktop Activities Media.">
                         <div>
-                            <p>my beautiful dog</p>
+                            <p>Desktop Activities Media</p>
                         </div>
                     </div>
 
                     <div class="slide">
-                        <img src="./media/5.jpg" alt="my beautiful cat.">
+                        <img src="./images/Screenshot_20211017_154639.png" alt="Custom LockScreen.">
                         <div>
-                            <p>my beautiful cat</p>
+                            <p>Custom LockScreen</p>
                         </div>
                     </div>
 
