--- a/slides.html
+++ b/slides.html
@@ -10,8 +10,7 @@
 <body>
     <div class="container">
         <div class="w-50 mx-auto my-3 text-center">
-            <h1>My SlideShow</h1>
-            <p>Plasma Cusomizations</p>
+            <h1>Plasma Customizations</h1>
             <hr>
 
             <div class="slideshow">
