--- a/slides.html
+++ b/slides.html
@@ -18,24 +18,32 @@
                     <div class="slide active">
                         <img src="./images/Screenshot_sddm.png" alt="Login Theme.">
                     </div>
-
+                     <div>
+                            <p>Plasma Login theme</p>
+                        </div>
                     <div class="slide">
                         <img src="./images/desktop.png" alt="Plasma Desktop.">
                     </div>
-                    <p> "Plasma Desktop" </p>
+                    <div>
+                            <p>Plasma Desktop theme</p>
+                        </div>
                     <div class="slide">
                         <img src="./images/desktop2.png" alt="Plasma Desktop Menu.">
                     </div>
                      <p> "Plasma Menu" </p>
                     <div class="slide">
                         <img src="./images/Screenshot_20211017_154010.png" alt="Desktop Activities Media.">
-                        <p> "Plasma LockScreen" </p>
+                        <div>
+                            <p>Plasma Activities Media Player</p>
+                        </div>
                     </div>
                      <p> "Plasma Desktop Activity Media Player" </p>
                     <div class="slide">
                         <img src="./images/Screenshot_20211017_154639.png" alt="Custom LockScreen.">
                     </div>
-
+                    <div>
+                            <p>Plasma Custom Lockscreen</p>
+                        </div>
                     <span class="prev">&#10094;</span>
                     <span class="next">&#10095;</span>
                 </div>
