--- a/slides.html
+++ b/slides.html
@@ -16,24 +16,24 @@
                 <div class="slides">
                     <div class="slide active">
                         <img src="./images/Screenshot_sddm.png" alt="Login Theme.">
+                         <div>Plasma Login Theme</div>
                     </div>
-                            <p>Plasma Login theme</p>
                     <div class="slide">
                         <img src="./images/desktop.png" alt="Plasma Desktop.">
+                         <div>Plasma Desktop Theme</div>
                     </div>
-                            <p>Plasma Desktop theme</p>
                     <div class="slide">
                         <img src="./images/desktop2.png" alt="Plasma Desktop Menu.">
+                         <div> "Plasma Menu" </div>
                     </div>
-                     <p> "Plasma Menu" </p>
                     <div class="slide">
                         <img src="./images/Screenshot_20211017_154010.png" alt="Desktop Activities Media.">
-                            <p>Plasma Activities Media Player</p>
+                            <div>Plasma Activities Media Player</div>
                     </div>
                     <div class="slide">
                         <img src="./images/Screenshot_20211017_154639.png" alt="Custom LockScreen.">
+                         <div>Plasma Custom Lockscreen</div>
                     </div>
-                            <p>Plasma Custom Lockscreen</p>
                     <span class="prev">&#10094;</span>
                     <span class="next">&#10095;</span>
                 </div>
