--- a/slides.html
+++ b/slides.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="slide">
                         <img src="./images/desktop2.png" alt="Plasma Desktop Menu.">
-                         <div> "Plasma Menu" </div>
+                         <div> Plasma Menu </div>
                     </div>
                     <div class="slide">
                         <img src="./images/Screenshot_20211017_154010.png" alt="Desktop Activities Media.">
