--- a/slides.html
+++ b/slides.html
@@ -34,6 +34,10 @@
                         <img src="./images/Screenshot_20211017_154639.png" alt="Custom LockScreen.">
                          <div>Plasma Custom Lockscreen</div>
                     </div>
+                    <div class="slide">
+                        <img src="./images/Screenshot_20211017_154629.png" alt="Custom LockScreen.">
+                         <div>Plasma Custom Lockscreen UI</div>
+                    </div>
                     <span class="prev">&#10094;</span>
                     <span class="next">&#10095;</span>
                 </div>
