--- a/slides.html
+++ b/slides.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+ <footer>
+  <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"> 
+  <p>TxHammer</p>
+  <p><a href="https://github.com/txhammer68</a></p>
+</footer> 
 <body>
     <div class="container">
         <div class="w-100 mx-auto my-3 text-center">
