--- a/slides.html
+++ b/slides.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
  <footer>
-  <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"> 
+  <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png width="64""> 
   <p>TxHammer</p>
   <p><a href="https://github.com/txhammer68</a></p>
 </footer> 
