--- a/slides.html
+++ b/slides.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
- <footer>
-  <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png width="64""> 
-  <p>TxHammer</p>
-  <p><a href="https://github.com/txhammer68</a></p>
-</footer> 
 <body>
     <div class="container">
         <div class="w-100 mx-auto my-3 text-center">
@@ -59,5 +54,10 @@
         </div>
     </div>
     <script src="./script.js"></script>
+  <div class="footer">
+    <p>TxHammer</p>
+    <p> <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png width="64"">  </p>
+    <p><a href="https://github.com/txhammer68</a></p>
+</div>
 </body>
 </html>
