--- a/slides.html
+++ b/slides.html
@@ -55,9 +55,8 @@
     </div>
     <script src="./script.js"></script>
   <div class="footer">
-    <p>TxHammer</p>
-    <p> <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png width="64"">  </p>
-    <p><a href="https://github.com/txhammer68</a></p>
+    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png width="64"">
+    <p>TxHammer <a href="https://github.com/txhammer68</a> </p>
 </div>
 </body>
 </html>
