--- a/slides.html
+++ b/slides.html
@@ -55,8 +55,9 @@
     </div>
     <script src="./script.js"></script>
   <div class="footer">
-    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png width="64"">
-    <p>TxHammer <a href="https://github.com/txhammer68</a> </p>
+    <p>TxHammer2</p>
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png width="64"">
+        <a href="https://github.com/txhammer68</a>
 </div>
 </body>
 </html>
