--- a/slides.html
+++ b/slides.html
@@ -55,9 +55,10 @@
     </div>
     <script src="./script.js"></script>
   <div class="footer">
-    <p>TxHammer2</p>
-        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png width="64"">
-        <a href="https://github.com/txhammer68</a>
+    <p>TxHammer</p>
+      <a href="https://github.com/txhammer68">
+    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="64">
+    </a>
 </div>
 </body>
 </html>
