--- a/slides.html
+++ b/slides.html
@@ -55,10 +55,8 @@
     </div>
     <script src="./script.js"></script>
   <div class="footer">
-    <p>TxHammer</p>
-      <a href="https://github.com/txhammer68">
-    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="64">
-    </a>
+      <li><a href="https://github.com/txhammer68"> <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="32"></li>
+      <li><a href="https://github.com/txhammer68">TxHammer68</a></li>
 </div>
 </body>
 </html>
