--- a/slides.html
+++ b/slides.html
@@ -55,7 +55,7 @@
     </div>
     <script src="./script.js"></script>
   <div class="footer">
-      <p><a href="https://github.com/txhammer68 target="_blank""><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="32">  TxHammer68</p>
+      <p><a href="https://github.com/txhammer68" target="_blank"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="32">  TxHammer68</p>
 </div>
 </body>
 </html>
